ERR
encode_decode_sequence() not found — aborting.

Launching training using same Python executable: /home/work/dcvc/miniconda3/envs/dcvc_env/bin/python
Training process exited with code: 256
  File "/home/work/dcvc/DCVC/training.py", line 149
    return {'x_hat': x_hat_seq, 'likelihoods': None, 'bpp_tensor': bpp_tensor}
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
